# galaxyarchive-AI

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  config.py  docker-compose.ai.yml  docker-compose.yml  main.py  model_configuration.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  docker-compose.ai.yml
app/: main.py  settings.py  test.py
app/article/handler/: article_handler.py
app/article/repositories/: article_repository.py  post_vector_repo.py
app/article/router/: article_router.py
app/article/service/: service.py
app/db/: database.py  db_connection.py
app/messaging/: KafakaConsumerManager.py
app/models/: __init__.py  base.py  bge_embedding.py
article_cluster/handler/: cluster_handler.py
article_cluster/service/: cluster_service.py  persist_cluster_service.py  reduce_dimension_service.py
article_created/handler/: article_created_handler.py
article_created/producer/: article_created_producer.py
article_created/repository/: article_keyword_repository.py  article_repository.py  article_vector_repository.py
article_created/service/: article_embedding.py  article_keword.py  article_service.py  persist_embedding_service.py
consumer/: kafka_consumer.py  worker.py
database/: database.py
producer/: kafka_producer.py
repository/: article_cluster_repository.py  article_keyword_repository.py  article_repository.py  article_vector_repository.py
