[project]
name = "galaxy-archive-embedding-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.14.2",
    "flagembedding>=1.4.0",
    "kiwipiepy>=0.23.2",
    "logging>=0.4.9.6",
    "numpy>=2.4.6",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
